Add database models, Entity Framework configuration, and initial migration
- Added Customer, Booking, and LoginToken models
- Configured Entity Framework with ApiDbContext
- Added Entity Framework packages to project file
- Updated Program.cs to configure database connection
- Created initial database migration
- Added appsettings.json for configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tent-rental-db;Username=postgres;***REMOVED***"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TentRental;Username=postgres;Password=YOUR_PASSWORD_HERE"
   }
 }
