Fix build issues and add unit testing infrastructure
- Fixed namespace inconsistencies across all files (TentRentalSaaS.Api)
- Updated Booking model with additional properties for API compatibility
- Fixed BookingService implementation with proper async/await patterns
- Added solution file and global.json for project structure
- Created test project with working unit tests for BookingService
- Fixed migration files to use correct namespaces
- Updated Program.cs to support controllers and proper DI
- Excluded test files from main project compilation
- All builds pass and tests run successfully (3/3 passed)

--- a/backend/TentRentalSaaS.Api.csproj
+++ b/backend/TentRentalSaaS.Api.csproj
@@ -16,4 +16,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="tests\**" />
+    <Content Remove="tests\**" />
+    <EmbeddedResource Remove="tests\**" />
+    <None Remove="tests\**" />
+  </ItemGroup>
+
 </Project>
