--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
