Add Google Maps integration and address validation
- Add GeocodingService with Google Maps API integration
- Add AddressDto for structured address handling
- Update BookingService to include address validation and geocoding
- Add address validation helpers and utilities
- Update BookingForm with address input fields
- Add Google Maps API configuration to appsettings
- Add comprehensive tests for geocoding functionality
- Update API endpoints to handle address data

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "GoogleMaps": {
+    "ApiKey": "***REMOVED***"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=TentRental;Username=postgres;Password=YOUR_PASSWORD_HERE"
   }
