--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleMaps": {
+    "ApiKey": "***REMOVED***"
+  },
   "Stripe": {
     "SecretKey": "***REMOVED***"
   }
