Add email service integration and enhance frontend pages
Backend changes:
- Add EmailService and IEmailService for booking confirmations
- Update BookingService to send confirmation emails
- Update Program.cs to register email service dependencies
- Update appsettings.json configuration

Frontend changes:
- Enhance BookingForm with improved UX and validation
- Update App.jsx with new routing configuration
- Add FaqPage and GalleryPage for better user experience
- Improve ConfirmationPage with booking details display
- Update HomePage with enhanced content and navigation

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=tent-rental-db;Username=postgres;***REMOVED***"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.example.com",
+    "Port": 587,
+    "From": "noreply@example.com",
+    "Username": "***REMOVED***",
+    "Password": "***REMOVED***"
   }
 }
