Update backend services and configuration
- Enhanced BookingService with additional functionality
- Improved EmailService implementation
- Updated Program.cs with new service configurations
- Added development and production configuration settings

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=tent-rental-db;Username=postgres;***REMOVED***"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.example.com",
+    "Port": 587,
+    "From": "noreply@example.com",
+    "Username": "***REMOVED***",
+    "Password": "***REMOVED***"
+  },
   "GoogleMaps": {
     "ApiKey": "***REMOVED***"
   },
