--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -15,5 +15,11 @@
     "From": "noreply@example.com",
     "Username": "***REMOVED***",
     "Password": "***REMOVED***"
+  },
+  "GoogleMaps": {
+    "ApiKey": "***REMOVED***"
+  },
+  "Stripe": {
+    "SecretKey": "***REMOVED***"
   }
 }
