--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
 # 1. Build the container image
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'us-docker.pkg.dev/cloud-builders/docker'
   args: ['build', '-t', 'us-central1-docker.pkg.dev/$_AR_PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA', '.']
-  dir: 'backend' # Corrected path since cloudbuild.yaml is in src
+  dir: 'backend'
 
 # 2. Push the container image to Artifact Registry
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'us-docker.pkg.dev/cloud-builders/docker'
   args: ['push', 'us-central1-docker.pkg.dev/$_AR_PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA']
 
 # 3. Deploy to Cloud Run with all configuration
-- name: 'gcr.io/google-cloud-sdk/gcloud'
+- name: 'us-docker.pkg.dev/google-cloud-sdk/gcloud'
   args:
   - 'run'
   - 'deploy'
