--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,3 +23,6 @@ steps:
 # Store the image in Artifact Registry
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
