--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,16 @@ steps:
   - '--set-env-vars=ASPNETCORE_ENVIRONMENT=Development,SMTP_SERVER=smtp.gmail.com,SMTP_PORT=587,SMTP_FROM=info@stepbackfarm.com,SMTP_USERNAME=david@stepbackfarm.com'
   - '--set-secrets=SMTP_PASSWORD=SMTP_PASSWORD:latest,GOOGLE_MAPS_API_KEY=GOOGLE_MAPS_API_KEY:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest'
 
+# 4. Route 100% of traffic to the latest revision
+- name: 'gcr.io/cloud-builders/gcloud'
+  args:
+  - 'run'
+  - 'services'
+  - 'update-traffic'
+  - '$_SERVICE_NAME'
+  - '--to-latest'
+  - '--region=$_DEPLOY_REGION'
+
 # Store the image in Artifact Registry
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA'
