--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,26 +13,28 @@ steps:
   args:
   - 'run'
   - 'deploy'
-  - '$_SERVICE_NAME' # <-- Populated by trigger
+  - '$_SERVICE_NAME'
   - '--image=us-central1-docker.pkg.dev/$_AR_PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA'
-  - '--region=$_DEPLOY_REGION' # <-- Populated by trigger
+  - '--region=$_DEPLOY_REGION'
+  - '--revision-suffix=$COMMIT_SHA' # Tag the revision with the commit SHA
+  - '--no-traffic' # Don't route traffic immediately
   - '--allow-unauthenticated'
   - '--set-env-vars=ASPNETCORE_ENVIRONMENT=Development,SMTP_SERVER=smtp.gmail.com,SMTP_PORT=587,SMTP_FROM=info@stepbackfarm.com,SMTP_USERNAME=david@stepbackfarm.com'
   - '--set-secrets=SMTP_PASSWORD=SMTP_PASSWORD:latest,GOOGLE_MAPS_API_KEY=GOOGLE_MAPS_API_KEY:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest'
 
-# 4. Route 100% of traffic to the latest revision
+# 4. Route 100% of traffic to the new revision
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
   - 'services'
   - 'update-traffic'
   - '$_SERVICE_NAME'
-  - '--to-latest'
+  - '--to-revisions=$_SERVICE_NAME-$COMMIT_SHA=100' # Route to the specific revision
   - '--region=$_DEPLOY_REGION'
 
 # Store the image in Artifact Registry
 images:
-- 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA'
+- 'us-central1-docker.pkg.dev/$_AR_PROJECT_ID/cloud-run-source-deploy/$_SERVICE_NAME:$COMMIT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY
