Revert "Fix Cloud Build secret configuration and environment variables"
This reverts commit 2bcb235a57b5e0595edaee7599aaec4ff56db534.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,8 +19,8 @@ steps:
   - '--revision-suffix=$COMMIT_SHA' # Tag the revision with the commit SHA
   - '--no-traffic' # Don't route traffic immediately
   - '--allow-unauthenticated'
-  - '--set-env-vars=ASPNETCORE_ENVIRONMENT=Production,SMTP_SERVER=smtp.gmail.com,SMTP_PORT=587,SMTP_FROM=info@stepbackfarm.com,SMTP_USERNAME=david@stepbackfarm.com,DB_HOST=172.22.208.3,DB_NAME=tent-rental-db,DB_USER=postgres'
-  - '--set-secrets=SmtpSettings:Password=GOOGLE_SMTP_APP_PASSWORD:latest,GOOGLE_MAPS_API_KEY=GOOGLE_MAPS_API_KEY:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest,DB_PASSWORD=DB_ADMIN_PASSWORD:latest'
+  - '--set-env-vars=ASPNETCORE_ENVIRONMENT=Development,SMTP_SERVER=smtp.gmail.com,SMTP_PORT=587,SMTP_FROM=info@stepbackfarm.com,SMTP_USERNAME=david@stepbackfarm.com'
+  - '--set-secrets=SMTP_PASSWORD=GOOGLE_SMTP_APP_PASSWORD:latest,GOOGLE_MAPS_API_KEY=GOOGLE_MAPS_API_KEY:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest'
 
 # 4. Route 100% of traffic to the new revision
 - name: 'gcr.io/cloud-builders/gcloud'
