--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://tentrental-backend-975936251815.us-central1.run.app/api/"
+      "destination": "https://tentrental-backend-975936251815.us-central1.run.app/api/$1"
     },
     {
       "source": "/((?!api/|_next/|static/|assets/|favicon.ico|sw.js).*)",
