Added configurable frontend URL to replaced hardcoded vercel address.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,19 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=tent-rental-db;Username=postgres;***REMOVED***"
-  },
-  "SmtpSettings": {
-    "Server": "smtp.example.com",
-    "Port": 587,
-    "From": "noreply@example.com",
-    "Username": "***REMOVED***",
-    "Password": "***REMOVED***"
-  },
-  "GoogleMaps": {
-    "ApiKey": "***REMOVED***"
-  },
-  "Stripe": {
-    "SecretKey": "***REMOVED***"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tentrentals;Username=postgres;***REMOVED***"
   }
 }
