docs: Add comprehensive secrets audit…

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "GoogleMaps": {
-    "ApiKey": "***REMOVED***"
+    "ApiKey": "YOUR_API_KEY_HERE"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=TentRental;Username=postgres;Password=YOUR_PASSWORD_HERE"
