--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@ ASPNETCORE_ENVIRONMENT=Development
 ASPNETCORE_URLS=http://0.0.0.0:5000
 
 # In Docker network use db:5432, for host-based dev use localhost:5433
-ConnectionStrings__Default=Host=db;Port=5432;Database=tent-rental-db;Username=postgres;***REMOVED***
+ConnectionStrings__Default=Host=db;Port=5432;Database=tent-rental-db;Username=postgres;Password=postgres
 
 ALLOWED_ORIGINS=http://localhost:5173
 
@@ -10,7 +10,7 @@ ALLOWED_ORIGINS=http://localhost:5173
 STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxx
 
 # Google Maps API
-GOOGLE_MAPS_API_KEY=***REMOVED***
+GOOGLE_MAPS_API_KEY=YOUR_API_KEY_HERE
 
 # Auth (optional/testing)
 GOOGLE_CLIENT_ID=
