--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -7,19 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=tent-rental-db;Username=postgres;***REMOVED***"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=tent-rental-db;Username=postgres;Password=postgres"
   },
   "SmtpSettings": {
     "Server": "smtp.example.com",
     "Port": 587,
     "From": "noreply@example.com",
-    "Username": "***REMOVED***",
-    "Password": "***REMOVED***"
+    "Username": "your-username",
+    "Password": "your-password"
   },
   "GoogleMaps": {
-    "ApiKey": "***REMOVED***"
+    "ApiKey": "YOUR_API_KEY_HERE"
   },
   "Stripe": {
-    "SecretKey": "***REMOVED***"
+    "SecretKey": "YOUR_STRIPE_TEST_SECRET_KEY"
   }
 }
