--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tentrentals;Username=postgres;***REMOVED***"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tentrentals;Username=postgres;Password=password"
   }
 }
