--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://0.0.0.0:5000
-      ConnectionStrings__Default: Host=db;Port=5432;Database=tent-rental-db;Username=postgres;***REMOVED***
+      ConnectionStrings__Default: Host=db;Port=5432;Database=tent-rental-db;Username=postgres;Password=postgres
       ALLOWED_ORIGINS: "http://localhost:${WEB_PORT:-5173}"
     ports:
       - "${API_PORT:-5000}:5000"
